--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 FILE(GLOB_RECURSE SOURCES src/*.cpp)
-set(CMAKE_CXX_FLAGS "-fdiagnostics-color=always -std=c++17")
+set(CMAKE_CXX_FLAGS "-fdiagnostics-color=always -std=c++17 -O3")
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
